--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.1",
     "@mui/x-data-grid": "^8.10.2",
+    "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
     "lucide-react": "^0.540.0",
     "next": "15.4.7",
@@ -32,7 +33,8 @@
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.7",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.12",
+    "tw-colors": "^3.3.2",
     "typescript": "^5"
   }
 }
