--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.1",
     "@mui/x-data-grid": "^8.10.2",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
     "lucide-react": "^0.540.0",
     "next": "15.4.7",
     "numeral": "^2.0.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-redux": "^9.2.0",
     "recharts": "^3.1.2",
+    "redux-persist": "^6.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
